--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2248,248 +2250,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>belongs_to_collection</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>...</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>title</th>\n",
-       "      <th>video</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>vote_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story</td>\n",
-       "      <td>862</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
-       "      <td>Good Rating</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8844</td>\n",
-       "      <td>tt0113497</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>262797249.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Roll the dice and unleash the excitement!</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2413.0</td>\n",
-       "      <td>Good Rating</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 119050, 'name': 'Grumpy Old Men Collect...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15602</td>\n",
-       "      <td>tt0113228</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Grumpier Old Men</td>\n",
-       "      <td>A family wedding reignites the ancient feud be...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
-       "      <td>Grumpier Old Men</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>Good Rating</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16000000</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>31357</td>\n",
-       "      <td>tt0114885</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Waiting to Exhale</td>\n",
-       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>81452156.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Friends are the people who let you be yourself...</td>\n",
-       "      <td>Waiting to Exhale</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>Good Rating</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 96871, 'name': 'Father of the Bride Col...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11862</td>\n",
-       "      <td>tt0113041</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Father of the Bride Part II</td>\n",
-       "      <td>Just when George Banks has recovered from his ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>76578911.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
-       "      <td>Father of the Bride Part II</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>Good Rating</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   adult                              belongs_to_collection    budget  \\\n",
-       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
-       "1  False                                                NaN  65000000   \n",
-       "2  False  {'id': 119050, 'name': 'Grumpy Old Men Collect...         0   \n",
-       "3  False                                                NaN  16000000   \n",
-       "4  False  {'id': 96871, 'name': 'Father of the Bride Col...         0   \n",
-       "\n",
-       "                                              genres  \\\n",
-       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
-       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   \n",
-       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...   \n",
-       "4                     [{'id': 35, 'name': 'Comedy'}]   \n",
-       "\n",
-       "                               homepage     id    imdb_id original_language  \\\n",
-       "0  http://toystory.disney.com/toy-story    862  tt0114709                en   \n",
-       "1                                   NaN   8844  tt0113497                en   \n",
-       "2                                   NaN  15602  tt0113228                en   \n",
-       "3                                   NaN  31357  tt0114885                en   \n",
-       "4                                   NaN  11862  tt0113041                en   \n",
-       "\n",
-       "                original_title  \\\n",
-       "0                    Toy Story   \n",
-       "1                      Jumanji   \n",
-       "2             Grumpier Old Men   \n",
-       "3            Waiting to Exhale   \n",
-       "4  Father of the Bride Part II   \n",
-       "\n",
-       "                                            overview  ...      revenue  \\\n",
-       "0  Led by Woody, Andy's toys live happily in his ...  ...  373554033.0   \n",
-       "1  When siblings Judy and Peter discover an encha...  ...  262797249.0   \n",
-       "2  A family wedding reignites the ancient feud be...  ...          0.0   \n",
-       "3  Cheated on, mistreated and stepped on, the wom...  ...   81452156.0   \n",
-       "4  Just when George Banks has recovered from his ...  ...   76578911.0   \n",
-       "\n",
-       "  runtime                                   spoken_languages    status  \\\n",
-       "0    81.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "1   104.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
-       "2   101.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "3   127.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "4   106.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "\n",
-       "                                             tagline  \\\n",
-       "0                                                NaN   \n",
-       "1          Roll the dice and unleash the excitement!   \n",
-       "2  Still Yelling. Still Fighting. Still Ready for...   \n",
-       "3  Friends are the people who let you be yourself...   \n",
-       "4  Just When His World Is Back To Normal... He's ...   \n",
-       "\n",
-       "                         title  video vote_average vote_count    vote_type  \n",
-       "0                    Toy Story  False          7.7     5415.0  Good Rating  \n",
-       "1                      Jumanji  False          6.9     2413.0  Good Rating  \n",
-       "2             Grumpier Old Men  False          6.5       92.0  Good Rating  \n",
-       "3            Waiting to Exhale  False          6.1       34.0  Good Rating  \n",
-       "4  Father of the Bride Part II  False          5.7      173.0  Good Rating  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_movies[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvote_type\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m  \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mwhere(df_movies[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvote_average\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m7\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGood Rating\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBad Rating\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m df_movies\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_movies[\"vote_type\"] =  np.where(df_movies[\"vote_average\"] > 5, \"Good Rating\", \"Bad Rating\")\n",
+    "df_movies[\"vote_type\"] =  np.where(df_movies[\"vote_average\"] > 7, \"Good Rating\", \"Bad Rating\")\n",
     "df_movies.head()\n",
     "#Aqui filtro las peliculas en base a sus notas."
    ]
@@ -2556,13 +2335,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_Movies_Budget \u001b[38;5;241m=\u001b[39m \u001b[43mdf_movies\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbudget\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#Cambio el nombre de las columnas.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m df_Movies_Budget\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBudget\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbudget\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSame_Budget\u001b[39m\u001b[38;5;124m\"\u001b[39m},inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_movies' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "df_Movies_Budget = df_movies[\"budget\"].value_counts().reset_index()\n",
     "#Cambio el nombre de las columnas.\n",
-    "df_Movies_Budget.rename(columns={\"index\":\"Budget\",\"budget\":\"Same_Budget\"},inplace=True)"
+    "df_Movies_Budget.rename(columns={\"index\":\"Budget\",\"budget\":\"Same_Budget\"},inplace=True)\n"
    ]
   },
   {
